[tool.poetry]
name = "nintynine-boundaries"
version = "0.2"
description = "Generate administrative boundaries with OpenStreetMap and Overpass"
license = "MIT"
authors = ["Timothy Ellersiek <merusame@gmail.com>"]
readme = "README.md"
homepage = "https://99boundaries.com"
repository = "https://github.com/timmccauley/nintynine-boundaries"
keywords = ["osm", "openstreetmap", "boundaries", "geospatial", "gis", "overpass"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^1.0.0"
osm2geojson = "^0.3.1"
Rtree = "^1.3.0"
numpy = "^2.0.0"
requests = "^2.31.0"
pandas = "^2.0.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.0"
flake8 = "^7.0.0"
flake8-docstrings = "^1.7.0"
darglint = "^1.8.1"
black = "^24.0.0"
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
make_boundary = "nintynine_boundaries.make_boundary:main"